Add gui.event package