@@ -233,6 +233,7 @@
                         --add-opens com.swardana.nayanika/com.swardana.nayanika.base=ALL-UNNAMED
                         --add-opens com.swardana.nayanika/com.swardana.nayanika.bg=ALL-UNNAMED
                         --add-opens com.swardana.nayanika/com.swardana.nayanika.gui=ALL-UNNAMED
+                        --add-opens com.swardana.nayanika/com.swardana.nayanika.gui.event=ALL-UNNAMED
                         --add-opens com.swardana.nayanika/com.swardana.nayanika.gui.frame=ALL-UNNAMED
                     </argLine>
                 </configuration>
